Refactor user authentication flow and enhance logging; update Java version to 17, add Mockito and Spring Boot starter dependencies, and implement unit tests for JwtFilter, UserController, UserService, and JwtService.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,34 @@ spring.datasource.password=iDevice_123456
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
+# ---------------------------
+# Logging levels
+# ---------------------------
+
+# Show logs for your application packages (controllers, services)
+logging.level.com.example.food_backend=DEBUG
+
+# Show Spring framework internal logs (optional, INFO is usually enough)
+logging.level.org.springframework=INFO
+
+# Show Hibernate SQL queries
+spring.jpa.show-sql=true
+
+# Format SQL nicely
+spring.jpa.properties.hibernate.format_sql=true
+
+# Log JDBC parameters for debugging (optional)
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Console output pattern (optional, makes it easier to read)
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# ---------------------------
+# Other useful settings
+# ---------------------------
+
+# Use UTC timezone for logs (optional)
+spring.jackson.time-zone=UTC
+
+# Enable verbose startup logs (optional)
+logging.level.root=INFO
